<resources>
    <string name="app_name">Doc Scanner Free</string>

    <string name="ocr_waiting_text">Extracting text</string>
    <string name="confirm">Confirm</string>
    <string name="no_crop">No Crop</string>
    <string name="crop">Crop</string>
    <string name="done">Next</string>
    <string name="retake">Retake</string>
    <string name="filters">Filters</string>
    <string name="files">Files</string>
    <string name="your_documents">Your Documents</string>
    <string name="no_scan_document_found">No Scan Document Found</string>
    <string name="search_documents">Search Documents</string>
    <string name="enter_folder_name">Enter Folder Name</string>
    <string name="create_new">Create</string>
    <string name="pdf_ext" translatable="false">.pdf</string>
    <string name="time">Time</string>
    <string name="create_date">Create Date</string>
    <string name="name">Name</string>
    <string name="size">Size</string>
    <string name="a_to_z">A to Z</string>
    <string name="z_to_a">Z to A</string>
    <string name="convert_error">File conversion error</string>

    <string name="backword"><![CDATA[<]]></string>
    <string name="forword"><![CDATA[>]]></string>

    <string name="pdf_type">application/pdf</string>
    <string name="select_file">Select File</string>
    <string name="pdf_suffix" translatable="false">_pdf</string>
    <string name="details">details</string>
    <string name="file_info">\n  File Name : %1$s \n\n  Path : %2$s \n\n  Size : %3$s \n\n  Date Modified %4$s</string>
    <string name="ok">Ok</string>
    <string name="rename">Rename</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="move_to_folder">Move To Folder</string>
    <string name="settings">Settings</string>
    <string name="loading">Loading</string>
    <string name="start">Start</string>
    <string name="save_document">Save Document</string>
    <string name="enter_document_name">Enter Document Name</string>
    <string name="select_type">Select Type</string>
    <string name="save">Save</string>
    <string name="created_success">File Created</string>
    <string name="create_the_folder_so_you_can_save_your_n_important_documents_in_them">Create the folder so you can save your \n important documents in them</string>
    <string name="pdf_reader">pdf <b>reader</b></string>
    <string name="msg_save_image">Are you want to exit without saving image?</string>
    <string name="premium">Upgrade to Premium</string>
    <string name="contact_us">Contact Us</string>
    <string name="trash">Trash</string>
    <string name="policy">Terms and Privacy</string>
    <string name="how_to_use">How to use</string>
    <string name="rate">Rate and Review</string>
    <string name="share_app">Share App</string>
    <string name="save_file">Save File</string>
    <string name="enter_file_name">Enter File Name</string>
    <string name="pdf_to_img">PDF to Image</string>
    <string name="default_notification_channel_id">com.document.scanner.fast.scan.pdf.create.pdf.editor</string>
    <string name="ad" translatable="false">Ad</string>
    <string name="default_notification_channel_name">documentscanner</string>

</resources>
