<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingBottom="31dp"
    >


    <ImageView
        android:id="@+id/close_btn"
        android:layout_marginTop="18dp"
        android:src="@drawable/ic_close_btn"
        android:layout_marginEnd="13dp"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/lbl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/save_document"
        android:textColor="@color/mid_grey"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lbl2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/enter_document_name"
        android:textColor="@color/mid_grey"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lbl1" />

    <EditText
        android:id="@+id/fileNameEd"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginTop="9dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="13dp"
        android:background="@drawable/edittext_white_bg"
        android:elevation="4dp"
        android:hint="@string/enter_folder_name"
        android:textColorHint="@color/light_grey"
        android:textColor="@color/mid_grey"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLength="20"
        android:paddingStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lbl2" />


    <TextView
        android:id="@+id/lbl3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/select_type"
        android:textColor="@color/mid_grey"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fileNameEd" />

    <RadioGroup
        android:id="@+id/fileRG"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/lbl3"
        android:layout_width="0dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="13dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb_PDF"
            android:background="@drawable/edittext_white_bg"
            android:checked="true"
            android:text="PDF"
            android:textColor="@color/light_grey"
            android:textSize="10dp"
            android:fontFamily="@font/roboto_medium"
            android:paddingStart="13dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="5dp"
            android:elevation="5dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>
        <RadioButton
            android:id="@+id/rb_IMG"
            android:background="@drawable/edittext_white_bg"
            android:text="IMAGE"
            android:textColor="@color/light_grey"
            android:textSize="10dp"
            android:fontFamily="@font/roboto_medium"
            android:layout_marginStart="5dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="2dp"

            android:elevation="5dp"
            android:paddingStart="13dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="40dp"/>

    </RadioGroup>

    <Button
        android:id="@+id/btn_SaveFile"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="13dp"

        android:background="@drawable/button_seagreen_light"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fileRG" />
    <View
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="1dp" />
    
</androidx.constraintlayout.widget.ConstraintLayout>