<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    android:orientation="vertical">


    <ImageButton
        android:id="@+id/settin_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="9dp"
        android:layout_marginTop="32dp"
        android:background="@null"
        android:src="@drawable/setting_ic"
        app:layout_constraintEnd_toStartOf="@+id/pdf_btn"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/pdf_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        android:background="@null"
        android:src="@drawable/pdf_ad_ic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="29dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:background="@null"
        android:src="@drawable/ic_back_arrow_ic"
        app:layout_constraintBottom_toBottomOf="@+id/settin_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <me.sid.smartcropperlib.view.CropImageView
        android:id="@+id/iv_crop"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:padding="20dp"
        app:civLineColor="@color/colorPrimary"
        app:civMagnifierCrossColor="@color/colorPrimaryDark"
        app:civPointFillColor="#9A27C4A5"
        app:civShowEdgeMidPoint="true"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toTopOf="@id/tv_crop_count"
        app:layout_constraintTop_toBottomOf="@+id/back_btn"   />




    <TextView
        android:id="@+id/tv_crop_count"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/crop_bottom_layout"
         android:layout_marginBottom="10dp"
        android:textColor="#FAFAFA"
        android:textSize="17dp"
        android:text="csc"
        android:visibility="gone"
        android:fontFamily="@font/roboto_regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/crop_bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="121dp"
        android:background="@color/dark_grey"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <Button
            android:id="@+id/btn_crop_cancel"
            style="@style/CustomButton"
            android:layout_width="108dp"
            android:layout_height="38dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/button_pink"
            android:text="@string/no_crop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_crop"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_crop"
            style="@style/CustomButton"
            android:layout_width="108dp"
            android:layout_height="38dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/button_pink"
            android:text="@string/crop"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_confirm"
            style="@style/CustomButton"
            android:layout_width="108dp"
            android:layout_height="38dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/button_seagreen"
            android:text="@string/confirm"
             app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_crop"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <!--<LinearLayout
        android:id="@+id/ll_btn"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/btn_filter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="filter" />
        <Button
            android:id="@+id/btn_rotate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="rotate" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="cancel" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="ok" />

    </LinearLayout>-->

</androidx.constraintlayout.widget.ConstraintLayout>
